services pages done

--- a/sourse/pug/blocks/sService/_sService.pug
+++ b/sourse/pug/blocks/sService/_sService.pug
@@ -97,3 +97,463 @@ mixin sService3(data)
 			tr
 				td Чистка выхлопной системы
 				td 1000
+
+mixin sService4(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность газонокосилки может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов газонокосилки, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Регулировка оборотов (1 кат.сложности)
+				td 200
+			tr
+				td Заточка ножа
+				td 350
+			tr
+				td Замена ремня вариатора
+				td 300
+			tr
+				td Замена стартера (5 кат. сложности)
+				td 990
+			tr
+				td Замена пружин клапанов (2 кат. сложности)
+				td 540
+			tr
+				td Ремонт самохода
+				td 800
+			tr
+				td Замена натяжного ролика
+				td 300
+			tr
+				td Замена редуктора
+				td 700
+			tr
+				td Ремонт системы зажигания (1 кат. сложности)
+				td 600
+			tr
+				td Замена шкива самохода
+				td 700
+			tr
+				td Правка коленвала
+				td 1100
+			tr
+				td Замена топливного фильтра (2 кат. сложности)
+				td 300
+			tr
+				td Ремонт двигателя (1 кат.сложности)
+				td 800
+
+mixin sService5(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность генератора может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов генератора, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Замена свечи
+				td 150
+			tr
+				td Исправление неисправностей в системе зажигания
+				td 700
+			tr
+				td Замена пружин клапанов (1 кат.сложности)
+				td 450
+			tr
+				td Ремонт системы впуска
+				td 760
+			tr
+				td Ремонт топливной системы (2 кат. сложности)
+				td 800
+			tr
+				td Замена конденсаторов
+				td 320
+			tr
+				td Ремонт двигателя (3 кат.сложности)
+				td 1200
+			tr
+				td Замена вольтметра
+				td 450
+			tr
+				td Замена воздушного фильтра
+				td 250
+			tr
+				td Замена панели управления
+				td 660
+			tr
+				td Замена коленвала двигателя
+				td 1900
+			tr
+				td Замена альтернатора
+				td 1300
+			tr
+				td Замена датчика уровня масла
+				td 400
+			tr
+				td Замена стартера (3 кат. сложности)
+				td 600
+			tr
+				td Регулировка карбюратора (3 кат. сложности)
+				td 500
+
+mixin sService6(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность садового измельчителя может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов садового измельчителя, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 1750
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Замена масла в двигателе
+				td 500
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 2000
+			tr
+				td Ремонт стартера
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 500
+			tr
+				td Замена катушки зажигания
+				td 500
+			tr
+				td Регулировка клапанов
+				td 1750
+			tr
+				td Замена ножа
+				td 1250
+
+mixin sService7(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность кустореза может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов кустореза, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 1250
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Ремонт / замена стартера
+				td 750
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 1250
+			tr
+				td Замена катушки зажигания
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 500
+			tr
+				td Замена глушителя
+				td 250
+			tr
+				td Мойка технологическая
+				td 250
+			tr
+				td Замена топливного фильтра
+				td 250
+
+mixin sService8(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность минитрактора может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов минитрактора, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 3750
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Замена масла в двигателе
+				td 500
+			tr
+				td Регулировка карбюратора
+				td 500
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 2750
+			tr
+				td Снятие / установка одного ремня привода
+				td 1250
+			tr
+				td Замена глушителя
+				td 500
+			tr
+				td Снятие / установка деки
+				td 1500
+			tr
+				td Регулировка клапанов
+				td 2500
+
+mixin sService9(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность мотопомпы может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов мотопомпы, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Замена всасывающего патрубка 
+				td 800
+			tr
+				td Замена свечи
+				td 150
+			tr
+				td Замена уплотнительной прокладки
+				td 670
+			tr
+				td Чистка жиклера карбюратора
+				td 300
+			tr
+				td Чистка топливной системы
+				td 830
+			tr
+				td Замена крыльчатки
+				td 1100
+			tr
+				td Замена обратного клапана
+				td 300
+			tr
+				td Ремонт карбюратора (2 кат. сложности)
+				td 800
+			tr
+				td Замена стартера (4 кат. сложности)
+				td 700
+			tr
+				td Замена шатуна
+				td 750
+			tr
+				td Чистка мотопомпы
+				td 300
+			tr
+				td Замена воздушного фильтра
+				td 250
+			tr
+				td Замена топливного фильтра (1 кат. сложности)
+				td 200
+
+mixin sService10(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность опрыскивателя может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов опрыскивателя, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 1250
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Ремонт / замена стартера
+				td 750
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 1250
+			tr
+				td Замена катушки зажигания
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 750
+			tr
+				td Ремонт / замена крыльчатки
+				td 750
+			tr
+				td Мойка технологическая
+				td 250
+			tr
+				td Замена топливного фильтра
+				td 250
+
+mixin sService11(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность воздуходувки может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов воздуходувки, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 1250
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Ремонт / замена стартера
+				td 750
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 1250
+			tr
+				td Замена катушки зажигания
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 750
+			tr
+				td Ремонт / замена крыльчатки
+				td 750
+			tr
+				td Мойка технологическая
+				td 250
+			tr
+				td Замена топливного фильтра
+				td 250
+
+mixin sService12(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность снегоуборщика может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов снегоуборщика, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Замена свечи
+				td 150
+			tr
+				td Установка и регулировка тяги привода шнеков
+				td 870
+			tr
+				td Замена резинового кольца фрикционного диска
+				td 860
+			tr
+				td Замена шнека
+				td 2650
+			tr
+				td Регулировка тяги привода гусениц (для гусеничных снегоуборщиков)
+				td 854
+			tr
+				td Регулировка карбюратора (5 кат. сложности)
+				td 780
+			tr
+				td Замена желоба выброса снега
+				td 1250
+			tr
+				td Регулировка тяги хода
+				td 500
+			tr
+				td Замена стартера (1 кат. сложности)
+				td 400
+			tr
+				td Замена червячного вала
+				td 950
+			tr
+				td Ремонт двигателя (4 кат.сложности) 
+				td 1500
+			tr
+				td Замена регулятора газа
+				td 400
+			tr
+				td Замена вала хода
+				td 700
+			tr
+				td Ремонт механизмов хода
+				td 800
+
+mixin sService13(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность триммера может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов триммера, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Диагностика
+				td 1250
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Ремонт / замена стартера
+				td 750
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 1250
+			tr
+				td Замена катушки зажигания
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 750
+			tr
+				td Ремонт / замена крыльчатки
+				td 750
+			tr
+				td Мойка технологическая
+				td 250
+			tr
+				td Замена топливного фильтра
+				td 250
