--- a/sourse/pug/blocks/sAbout/_sAbout.pug
+++ b/sourse/pug/blocks/sAbout/_sAbout.pug
@@ -23,5 +23,5 @@ mixin sAbout(data)
 				p В&nbsp;нашем интернет магазине покупателя ждет простой и&nbsp;информативный интерфейс, подробная информация о&nbsp;реализуемом товаре, скидки и&nbsp;акции, а&nbsp;так&nbsp;же распродажа уцененной техники. Это поможет подобрать наиболее востребованный вид оборудования или инвентаря. 
 				p Удобные формы оплаты и&nbsp;быстрая доставка в&nbsp;Москве и&nbsp;по&nbsp;России позволят воспользоваться лучшей садовой техникой в&nbsp;самые сжатые сроки. Максимальная гарантия и&nbsp;современный сервис распространяется на&nbsp;всю продукцию, а&nbsp;в&nbsp;случае поломки бензиновой или электрической техники, вы&nbsp;всегда можете обратиться за&nbsp;помощью к&nbsp;нашим специалистам из&nbsp;сервисного центра. 
 				p Приглашаем к&nbsp;выгодному сотрудничеству розничных и&nbsp;оптовых покупателей.
-			+e.btn.BUTTON Подробнее...
+			+e.btn--js.BUTTON Подробнее...
 	// end sAbout
