--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -2,8 +2,31 @@ mixin sBlog(data)
 	// start sBlog
 	+b.SECTION.sBlog.section#sBlog&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 sBlog
-				
+			+breadcrumb('Главная', 'Статьи')
 			.row
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
+				.col-6.col-sm-4.col-lg-2
+					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
+			button Показать еще
 	// end sBlog
