--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -98,6 +98,11 @@
 		border-left: 5px solid $red;
 		padding-left: rem(10);
 	}
+	&--article {
+		h1 {
+			font-weight: 700;
+		}
+	}
 }
 
 .sidebar {
