--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -124,6 +124,9 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sCatalogBody/_sCatalogBody.scss';
 @import '../pug/blocks/sCommunications/_sCommunications.scss';
 @import '../pug/blocks/sBlog/_sBlog.scss';
+@import '../pug/blocks/sArticle/_sArticle.scss';
+@import '../pug/blocks/sBlogSlider/_sBlogSlider.scss';
+@import '../pug/blocks/sBlogNav/_sBlogNav.scss';
 
 
 @import '../pug/blocks/header/_header.scss';
