acc block in progress

--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -10,5 +10,5 @@ mixin sForm()
 					+input(`E-mail:`)
 				.col-lg-6
 					+input(`Ваш вопрос:`,`textarea`)
-			button.sForm__btn.btn Спросить
+			button.sForm__btn.btn.btn-main Спросить
 	// end sForm
