--- a/sourse/pug/pages/05-account-forget.pug
+++ b/sourse/pug/pages/05-account-forget.pug
@@ -38,7 +38,7 @@ block pagecontent
 				+sidebar(`1`,`Личные данные`,`Мои заказы`,`Выйти`)
 			.col-lg-10
 				.mainside
-					+sAccountLogin
+					+sAccountForget
 	+footer
       
 
