--- a/sourse/pug/blocks/sArticle/_sArticle.pug
+++ b/sourse/pug/blocks/sArticle/_sArticle.pug
@@ -28,7 +28,7 @@ mixin sArticle(data)
 		p При выборе смазки важно обращать внимание также на&nbsp;бренд. Самые лучшие продукты этого типа выпускаются под такими торговыми марками как Husqvarna, Huter, Stihl.
 		h2 Обслуживание триммера в&nbsp;домашних условиях
 		p Триммеры требуют правильного ухода, особенно те&nbsp;модели, которые работают на&nbsp;бензине. Сложные мероприятия проводятся в&nbsp;сервисном центре, а&nbsp;вот простые операции можно выполнить самостоятельно в&nbsp;гараже. Каждый владелец должен знать, как чистить электрический триммер или мотокосу, как менять фильтрующие элементы, наматывать леску на&nbsp;шпулю и&nbsp;пр.
-		h2 Двигатель
+		h2(id='dvig') Двигатель
 		p Двигатель отвечает за&nbsp;обеспечение работоспособности триммеру. Техника популярных брендов комплектуется надежными моторами, которые имеют повышенный рабочий ресурс. Наиболее распространенные проблемы, которые могут возникнуть с&nbsp;силовым агрегатом:
 		ul
 			li поломка карбюратора;
