--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -22,6 +22,8 @@ mixin top-nav()
 	+b.top-nav.block-with-lazy
 		.container
 			.row
+				+e.catalog.col
+					button.catalog-btn.catalog-btn--js <span></span>Каталог товаров
 				.col.order-lg-0.order-last
 					.menu-mobile.menu-mobile--js
 						.menu-mobile__inner
