--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -14,6 +14,7 @@ include ../blocks/sBlogPreview/_sBlogPreview.pug
 include ../blocks/sBrands/_sBrands.pug
 include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sCommunications/_sCommunications.pug
+include ../blocks/sCatalogNav/_sCatalogNav.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
@@ -34,6 +35,7 @@ block pagecontent
 	+topLine
 	+top-nav()
 	+header()
+	+sCatalogNav()
 	+headerBlock
 	+sMainCategories
 	+sHit('Хит')
