--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -12,6 +12,7 @@ mixin allcss()
 mixin allcjs() 
 	script(src="libs/jquery/jquery.min.js")
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
-	script(src="libs/swiper/swiper-bundle.min.js")  
+	script(src="libs/swiper/swiper-bundle.min.js")
+	script(src="libs/hc-sticky/hc-sticky.js")
 	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js") 
 	script(src=`js/common.js?v=${version}`)
