--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -1,17 +1,33 @@
+mixin modalBasketRow(img, name, number)
+	+e.TR.item
+		+e.TD.img-wrap
+			+img(`img/to-cart-${img}.jpg`)
+		+e.TD.name
+			a(href="#")!= name
+		+e.TD.number= number
 
 mixin modal() 
 	//  start modals
-	a(href="modal-call").link-modal-js modal-call 
-	div(id="modal-call"  style="display: none" )
+	//- a(href="modal-call").link-modal-js modal-call 
+	div(id="one-click-order"  style="display: none" )
 		+b.modal-win
 			+form-wrap
-				.text-center
-					+e.title.form-data.h3.ttu Обратный звонок
-					p.after-headline Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут
+				+e.title.form-data.h3 Быстрый заказ
+				+input(``,'text','ФИО: ')(required)
+				+input(``,'number','Телефон: ')(required)
+				+e.BUTTON.btn.btn-main(type="submit") Купить
 
-				+input("Ваше Имя")(required)  
-				+e.BUTTON.btn.btn(type="submit"  )  
-				+policy()
-	// #modal-call
-	
+	div(id="added-to-cart"  style="display: none" )
+		+b.modal-win
+			+e.title.form-data.h3 Товар добавлен в корзину
+			+b.TABLE.modal-basket
+				tbody
+					+modalBasketRow('1','Штыковая укороченная лопата FISKARS SolidTM 1026667','1')
+					+modalBasketRow('2','Аккумуляторная газонокосилка PATRIOT РТ 330 Li','35')
+			.modal-basket__price
+				p Общая стоимость
+				.modal-basket__total 13 140 руб.
+			.modal-basket__buttons
+				+e(href="#").btn--green Продолжить покупки
+				+e(href="#").btn--blue Перейти в корзину
 	// end modals
