--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -11,21 +11,137 @@
 	background-color: #fff;
 	max-width: 100%;
 	position: relative;
-	width: rem(1500);
+	width: rem(420);
 	// min-height: 100%; 
-	padding: 40px;
-
+	padding: 20px;
+	&__title {
+		padding-left: rem(10);
+		margin-bottom: rem(20);
+		font-size: rem(18) !important;
+		font-weight: bold;
+		border-left: 5px solid #ff3300;
+	}
+	&__btn {
+		text-align: center;
+		padding: rem(10) rem(15);
+		color: $white;
+		&:hover {
+			opacity: .8;
+			color: $white;
+		}
+		&--green {
+			margin-right: $grid-gutter-width;
+			background-color: $green;
+			font-weight: bold;
+		}
+		&--blue {
+			background-color: $blue;
+		}
+	}
+	.form-wrap {
+		label {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+		&__title {
+			padding-left: rem(10);
+			margin-bottom: rem(20);
+			font-size: rem(18) !important;
+			font-weight: bold;
+			border-left: 5px solid #ff3300;
+		}
+		&__input {
+			display: inline-block;
+			margin-bottom: $grid-gutter-width;
+			width: 70%;
+			height: rem(40);
+			background-color:transparent;
+			border: 1px solid $body-color;
+			&-title {
+				font-size: 13px;
+				font-weight: 700;
+				&::after {
+					content: '*';
+					color: $red;
+				}
+			}
+		}
+		&__btn {
+			margin-top: rem(20);
+			width: 50%;
+			position: relative;
+			left: 50%;
+			transform: translate(-50%, 0);
+			border: none;
+			@include mt;
+			&:hover {
+				background-color: $green;
+			}
+		}
+	}
+	
 	.modal-content {
 		// max-width: 485px;
 		// padding-right: 40px 15px;
-	}
-
+	}	
+	
 	.mfp-close {
 		color: $primary;
 		font-size: 40px;
 		font-weight: 100;
 	}
 }
+
+.modal-basket {
+	margin-bottom: $grid-gutter-width;
+	&__item {
+		padding: 2px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		&:not(:first-child) {
+			border-top: 1px solid #ddd;
+		}
+	}
+	&__img-wrap {
+		padding: 2px;
+		max-width: 20%;
+		img {
+			max-width: 100%;
+		}
+	}
+	&__name a {
+		padding: 2px;
+		color: $blue;
+		font-size: 13px;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+	&__number {
+		min-width: 25px;
+		padding: 2px;
+	}
+	&__price {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: $grid-gutter-width;
+	}
+	&__total {
+		display: inline-block;
+		margin-left: auto;
+		font-size: rem(20);
+		font-weight: 700;
+	}
+	&__buttons {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: nowrap;
+	}
+}
+
 
 a {
 	outline: 0 !important;
