--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -21,5 +21,6 @@ block pagecontent
 			mixin btn(id, name)
 				.col-auto.mb-2
 					a.btn.btn-primary(href=`#` data-src=id data-fancybox="modal")= name
-			+btn("modal-call", "modal-call")
+			+btn("one-click-order", "Заказать в один клик")
+			+btn("added-to-cart", "Товар добавлен в корзину")
 
