--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,6 +39,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(20,16)*1em;
 }
+.icon-close {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-compare {
 	font-size:math.div(31,10)*1rem;
 	width: math.div(31,31)*1em;
