--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -35,7 +35,7 @@ $output-bourbon-deprecation-warnings: false;
 // @import "./node_modules/bootstrap/scss/images";
 @import "./node_modules/bootstrap/scss/containers";
 @import "./node_modules/bootstrap/scss/grid";
-// @import "./node_modules/bootstrap/scss/tables";
+@import "./node_modules/bootstrap/scss/tables";
 @import "./node_modules/bootstrap/scss/forms";
 @import "./node_modules/bootstrap/scss/buttons";
 // @import "./node_modules/bootstrap/scss/transitions";
@@ -132,6 +132,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sService/_sService.scss';
 @import '../pug/blocks/sCatalogNav/_sCatalogNav.scss';
 @import '../pug/blocks/sRegister/_sRegister.scss';
+@import '../pug/blocks/sBasket/_sBasket.scss';
 
 @import '../pug/blocks/sAccount/_sAccount.scss';
 
