--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -26,6 +26,25 @@ mixin sAllCategories(data)
 								+allCategoriesItem('Маски и очки сварщика')
 							.swiper-slide
 								+allCategoriesItem('Сварочные аппараты')
-				.col-2
-					+e.show.BUTTON Все категории
+				+e.col--js.col-12
+					+e.fullList
+						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+						+allCategoriesItem('Сварочное оборудование')
+						+allCategoriesItem('Аппараты для контактной сварки')
+						+allCategoriesItem('Аппараты для плазменной резки')
+						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+						+allCategoriesItem('Сварочное оборудование')
+						+allCategoriesItem('Аппараты для контактной сварки')
+						+allCategoriesItem('Аппараты для плазменной резки')
+						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+						+allCategoriesItem('Сварочное оборудование')
+						+allCategoriesItem('Аппараты для контактной сварки')
+						+allCategoriesItem('Аппараты для плазменной резки')
+						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+						+allCategoriesItem('Сварочное оборудование')
+						+allCategoriesItem('Аппараты для контактной сварки')
+						+allCategoriesItem('Аппараты для плазменной резки')
+				.col
+					+e.show.BUTTON 
+						+e.P.text Все категории
 	// end sAllCategories
