--- a/sourse/pug/pages/02-catalog.pug
+++ b/sourse/pug/pages/02-catalog.pug
@@ -34,6 +34,7 @@ block pagecontent
 	+top-nav()
 	//- +sMainCategories
 	+page-head(title, 'Главная', 'Садовая техника')
+	+sAllCategories
 	.container
 		+sCatalogHead()
 		.row
