--- a/sourse/pug/blocks/sArticle/_sArticle.scss
+++ b/sourse/pug/blocks/sArticle/_sArticle.scss
@@ -36,6 +36,12 @@
 	img {
 		float: right;
 		margin: rem(14);
+		max-width: 40%;
+		@include media-breakpoint-down(sm) {
+			width: 100%;
+			max-width: none;
+			margin: 0 0 rem(14);
+		}
 	}
 
 
