--- a/sourse/pug/blocks/sBasket/_sBasket.pug
+++ b/sourse/pug/blocks/sBasket/_sBasket.pug
@@ -1,16 +1,16 @@
 mixin basketItem(img,name,number,weight,price)
 	+b.basket-item.TR
-		+e.img-wrap.TD
+		+e.img-wrap.TD(data-label="Товар")
 			a(href="#")
 				+img(`img/basket-${img}.jpg`)
 		+e.title.TD
 			+e.name(href="#")!= name
-		+e.number.TD!= number
-		+e.count.TD
+		+e.number.TD(data-label="Артикул")!= number
+		+e.count.TD(data-label="Количество")
 			+addblock()
-		+e.weight.TD #{weight} кг
-		+e.price.TD #{price} руб.
-		+e.delete.TD
+		+e.weight.TD(data-label="Вес") #{weight} кг
+		+e.price.TD(data-label="Цена") #{price} руб.
+		+e.delete.TD(data-label="Удалить из корзины")
 			+e.remove-btn.BUTTON
 				+icon('close')
 
@@ -20,7 +20,7 @@ mixin sBasket(data)
 	+b.SECTION.sBasket.section#sBasket&attributes(attributes)
 		.container
 			table.table.table-borderless
-				thead.table-dark
+				thead.table-dark.header-top
 					tr
 						th(colspan="2").text-start Товар
 						th Артикул
