--- a/sourse/pug/blocks/sBasket/_sBasket.scss
+++ b/sourse/pug/blocks/sBasket/_sBasket.scss
@@ -9,6 +9,27 @@
 	th {
 		text-align: center;
 	}
+	thead {
+		@include media-breakpoint-down(md) {
+			display: block;
+		}
+		tr {
+			@include media-breakpoint-down(md) {
+				display: flex;
+			}
+		}
+		th {
+			@include media-breakpoint-down(md) {
+				width: 100%;
+			}
+		}
+	}
+	.header-top {
+		@include media-breakpoint-down(md) {
+			display: none;
+		}
+	}
+		
 	img {
 		max-height: 150px;
 		object-fit: contain;
@@ -16,6 +37,32 @@
 	tbody {
 		background-color:$white;
 	}
+
+	tbody tr {
+		@include media-breakpoint-down(md) {
+			border-bottom: 1px solid #dddddd;
+			display: block;
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+			}
+		}
+	}
+	
+	td {
+		@include media-breakpoint-down(md) {
+			display: block;
+			width: 100%;
+		}
+		&:before {
+			@include media-breakpoint-down(md){
+				content: attr(data-label);
+				float: left;
+				text-transform: uppercase;
+				font-weight: bold;
+			}
+		}
+	}
+
 
 	.icon-close {
 		font-size: rem(20);
@@ -49,6 +96,13 @@
 			}
 		}
 	}
+
+	// td {
+	// 	@include media-breakpoint-down(md) {
+	// 		width: auto;
+	// 	}
+	// }
+
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
