--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -111,6 +111,14 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-truck {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
+}
+.icon-user {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
+}
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -118,6 +126,10 @@
 .icon-vk {
 	font-size:math.div(18,10)*1rem;
 	width: math.div(30,18)*1em;
+}
+.icon-wallet {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
 }
 .icon-whatsapp {
 	font-size:math.div(30,10)*1rem;
