--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -28,22 +28,39 @@ mixin sAllCategories(data)
 								+allCategoriesItem('Сварочные аппараты')
 				+e.col--js.col-12
 					+e.fullList
-						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-						+allCategoriesItem('Сварочное оборудование')
-						+allCategoriesItem('Аппараты для контактной сварки')
-						+allCategoriesItem('Аппараты для плазменной резки')
-						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-						+allCategoriesItem('Сварочное оборудование')
-						+allCategoriesItem('Аппараты для контактной сварки')
-						+allCategoriesItem('Аппараты для плазменной резки')
-						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-						+allCategoriesItem('Сварочное оборудование')
-						+allCategoriesItem('Аппараты для контактной сварки')
-						+allCategoriesItem('Аппараты для плазменной резки')
-						+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-						+allCategoriesItem('Сварочное оборудование')
-						+allCategoriesItem('Аппараты для контактной сварки')
-						+allCategoriesItem('Аппараты для плазменной резки')
+						+e.row-full-list.row
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Сварочное оборудование')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для плазменной резки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для контактной сварки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Сварочное оборудование')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для плазменной резки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для контактной сварки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Сварочное оборудование')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для контактной сварки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для плазменной резки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Сварочное оборудование')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для контактной сварки')
+							.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
+								+allCategoriesItem('Аппараты для плазменной резки')
 				.col
 					+e.show.BUTTON 
 						+e.P.text Все категории
