--- a/sourse/pug/blocks/sBlogSlider/_sBlogSlider.pug
+++ b/sourse/pug/blocks/sBlogSlider/_sBlogSlider.pug
@@ -1,33 +1,56 @@
-mixin sBlogSlider(data)
+mixin sBlogSlider(previouslyViewed)
 	// start sBlogSlider
 	+b.SECTION.sBlogSlider.section#sBlogSlider&attributes(attributes)
 		.container.sliderAutoWidthWrap
 			+b.section-title
 					.row
 						.col
-							h2 Другие статьи
+							if previouslyViewed
+								h2!= previouslyViewed
+							else
+								h2 Другие статьи
 						.col-auto
 							+controlWrap()
 			+b.sliderAutoWidth--js.swiper
 				.swiper-wrapper
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-					.swiper-slide
-						+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+					if previouslyViewed
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+						.swiper-slide
+							+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+					else
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
+						.swiper-slide
+							+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
 	// end sBlogSlider
